Fix Archives white spaces
These should be maintained by a `gap` property, not by a `margin`
property.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -255,11 +255,15 @@
 
   /* Archives */
   .archives {
-    column-gap: var(--space-h-default);
     display: flex;
     flex-wrap: wrap;
+    gap: var(--space-v-tiny) var(--space-h-default);
     list-style-type: none;
     padding-inline-start: 0;
+  }
+
+  .archives li {
+    margin-block-start: 0;
   }
 
   /* Date */
